--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "sdk": "2.1",
-    "className": "user-story-ancestor-grid",
+    "className": "feature-ancestor-grid",
     "server": "https://rally1.rallydev.com"
 }
