--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "feature-ancestor-grid",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "scripts": {
     "debug": "grunt debug",
     "debug:watch": "nodemon --exec grunt debug",
     "deploy:watch": "nodemon --exec grunt deploy",
     "deploy-pretty:watch": "nodemon --exec grunt deploy-pretty",
     "deploy-debugsdk:watch": "nodemon --exec grunt deploy-debugsdk"
+  },
+  "dependencies": {
+    "@customagile/ancestor-pi-multi-level-pi-app-filter": "git+https://github.com/CustomAgile/utils-ancestor-pi-app-filter.git"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
