--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
     "sdk": "2.1",
-    "className": "feature-ancestor-grid",
+    "className": "user-story-ancestor-grid",
     "server": "https://rally1.rallydev.com",
-    "repository": "https://github.com/CustomAgile/feature-ancestor-grid",
+    "repository": "https://github.com/CustomAgile/user-story-ancestor-grid",
     "javascript": [
         "src/javascript/utils/__ts-info-link.js",
         "src/javascript/utils/__ts-logger.js",
         "src/javascript/utils/ancestor-template-column.js",
+        "src/javascript/utils/record-field-renderer-factory.js",
         "src/javascript/utils/file-utilities.js",
         "src/javascript/utils/overrides.js",
         "node_modules/@customagile/ancestor-pi-multi-level-pi-app-filter/index.js",
