--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "javascript": [
         "src/javascript/utils/__ts-info-link.js",
         "src/javascript/utils/__ts-logger.js",
+        "src/javascript/utils/tranche-template-column.js",
         "src/javascript/utils/ancestor-template-column.js",
         "src/javascript/utils/record-field-renderer-factory.js",
         "src/javascript/utils/file-utilities.js",
