--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "user-story-ancestor-grid",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "scripts": {
     "debug": "grunt debug",
     "debug:watch": "nodemon --exec grunt debug",
@@ -9,7 +9,8 @@
     "deploy-debugsdk:watch": "nodemon --exec grunt deploy-debugsdk"
   },
   "dependencies": {
-    "@customagile/ancestor-pi-multi-level-pi-app-filter": "git+https://github.com/CustomAgile/utils-ancestor-pi-app-filter.git"
+    "@customagile/ancestor-pi-multi-level-pi-app-filter": "git+https://github.com/CustomAgile/utils-ancestor-pi-app-filter.git",
+    "@customagile/utils-field-renderer": "git+https://github.com/CustomAgile/utils-field-renderer.git"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
@@ -19,7 +20,7 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-prompt": "^1.3.3",
     "grunt-templater": "git://github.com/rockwood/grunt-templater.git",
-    "nodemon": "^1.14.11",
+    "nodemon": "^1.19.4",
     "rally-sdk2-test-utils": "0.1.2",
     "request": "2.67",
     "underscore": "1.8.3",
