--- a/config.json
+++ b/config.json
@@ -8,14 +8,19 @@
         "src/javascript/utils/__ts-logger.js",
         "src/javascript/utils/tranche-template-column.js",
         "src/javascript/utils/ancestor-template-column.js",
-        "src/javascript/utils/record-field-renderer-factory.js",
         "src/javascript/utils/file-utilities.js",
         "src/javascript/utils/overrides.js",
+        "src/javascript/utils/_customagile-multiselect-timebox.js",
+        "src/javascript/utils/customagile-multiselect-project.js",
+        "src/javascript/utils/_customagile-pill-picker.js",
         "node_modules/@customagile/ancestor-pi-multi-level-pi-app-filter/index.js",
+        "node_modules/@customagile/utils-field-renderer/field-renderer.js",
+        "node_modules/papaparse/papaparse.min.js",
         "src/javascript/app.js"
     ],
     "css": [
         "src/style/app.css",
-        "node_modules/@customagile/ancestor-pi-multi-level-pi-app-filter/index.css"
+        "node_modules/@customagile/ancestor-pi-multi-level-pi-app-filter/index.css",
+        "src/style/multiselect-timebox.css"
     ]
 }
